k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: de-ai-19
spec:
  type: NodePort

  selector:
    app.kubernetes.io/name: web

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
